a1/brendan_gordon/TEST_PROGRAMS/invalidtype/david_rapoport/invalidtype5.min
# times is not defined for string

var y : string;
var x : string;

print x*y;
